--- a/kadai_tutorial_output/style.css
+++ b/kadai_tutorial_output/style.css
@@ -1,15 +1,25 @@
 body {
-    font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans-serif;
+    font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial,sans-serif;
 }
 
 p {
     font-size: 15px;
 }
 
+.arrow-right {
+    color: #2710d5;
+}
+
+#submit {
+    margin-top: 50px;
+}
+
+/* PC */
 @media screen and (min-width: 768px) {
+    /* index.html*/
     body {
         max-width: 1080px;
-        min-width: 960px;
+        min-width: 900px;
         margin: 0 auto 0 auto;
     }
 
@@ -22,6 +32,7 @@ p {
         font-size: 14px;
         padding-top: 15px;
     }
+
     #nav-pc > a {
         text-decoration: none;
         margin-left: 20px;
@@ -39,6 +50,7 @@ p {
     #nav-pc > a:active {
         color: #0d0d0d;
     }
+
     #nav-sp {
         display: none;
     }
@@ -54,7 +66,7 @@ p {
         position: absolute;
         top: 0;
         left: 0;
-        background-color: #2710D5;
+        background-color: #2710d5;
         color: #ffffff;
         border-radius: 0 0 476px 0;
         max-width: 620px;
@@ -140,7 +152,6 @@ p {
         height: 480px;
         margin-left: 20px;
     }
-
     .product-photo {
         width: 100%;
     }
@@ -157,7 +168,7 @@ p {
         color: #2710d5;
         font-weight: bold;
         font-size: 16px;
-        margin: 0;
+        margin: 0px;
     }
     .product-explain > h3 {
         font-size: 20px;
@@ -167,7 +178,6 @@ p {
         font-size: 14px;
         margin: 0;
     }
-
     #product-more {
         margin: 0 auto -42px auto;
     }
@@ -178,6 +188,7 @@ p {
     #aboutus > div {
         display: flex;
     }
+
     .culture-img {
         width: 100%;
         align-self: flex-start;
@@ -192,7 +203,7 @@ p {
     .culture-num {
         font-size: 80px;
         color: #2710d5;
-        margin-right: 0 20px 0 0;
+        margin: 0 20px 0 0;
     }
     .culture-en {
         color: #2710d5;
@@ -291,6 +302,7 @@ p {
         border-bottom-width: 1px;
         border-bottom-style: solid;
         border-top-color: #ececec;
+        border-top-width: 1px;
         border-top-style: solid;
     }
     #company > iframe {
@@ -326,10 +338,10 @@ p {
         border-right: 0px;
         border-bottom-width: 1px;
         border-bottom-color: #707070;
-        border-bottom-style: solid;
+        border-style: solid;
         background-color: #fafafa;
-        width: 400px;
         height: 56px;
+        width: 400px;
     }
     .contact-textarea {
         border-top: 0px;
@@ -337,7 +349,6 @@ p {
         border-right: 0px;
         border-bottom-width: 1px;
         border-bottom-color: #707070;
-        border-bottom-style: solid;
         background-color: #fafafa;
         width: 400px;
         height: 200px;
@@ -381,7 +392,6 @@ p {
     #footer-link > a:active {
         color: #ffffff;
     }
-
     #sns-footer {
         text-align: left;
         width: 100%;
@@ -389,35 +399,198 @@ p {
     #sns-footer > a {
         margin-right: 30px;
     }
+
     #copyright {
         color: #ffffff;
         float: right;
     }
+
+    /* mission.html*/
+    #mission-main {
+        height: 496px;
+        width: 100%;
+        background-image: url("images/mission/mission-main.png");
+        background-repeat: no-repeat;
+        background-position-y: center;
+    }
+    #mission-title {
+        background-color: #2710d5;
+        width: 368px;
+        color: #ffffff;
+        height: 496px;
+        border-radius: 0 248px 248px 0;
+        position: relative;
+    }
+    #mission-title > h1 {
+        position: absolute;
+        top: 0;
+        left: 100px;
+        font-size: 80px;
+    }
+    #mission-title > span {
+        position: absolute;
+        top: 200px;
+        left: 100px;
+        font-size: 26px;
+    }
+    #mission-title > div {
+        position: absolute;
+        top: 350px;
+        left: 100px;
+        font-size: 16px;
+    }
+    #mission-s2dgs {
+        width: 100%;
+        margin: 20px;
+    }
+    .mission-h2 {
+        color: #2710d5;
+        font-size: 40px;
+    }
+    .mission-h2::after {
+        content: none;
+    }
+    #mission-5goals {
+        margin: 20px;
+        display: flex;
+    }
+    #mission-5goals > div {
+        flex-grow: 1;
+        padding: 20px;
+    }
+    #mission-5goals > div > div {
+        margin-bottom: 40px;
+    }
+    .fivegoals-image-right {
+        float: right;
+        margin: 20px;
+    }
+    .fivegoals-image-left {
+        float: left;
+        margin: 20px;
+    }
+    .fivegoals-number {
+        color: #2710d5;
+        font-size: 48px;
+        font-weight: bold;
+        margin: 0;
+    }
+    .fivegoals-h3 {
+        font-size: 28px;
+        margin: 0;
+    }
+    .fivegoals-p {
+        margin: 0;
+    }
+
+    /* product.html */
+    #product-main {
+        height: 496px;
+        width: 100%;
+        background-image: url("images/product/product-main.png");
+        background-repeat: no-repeat;
+        background-position-y: center;
+    }
+    #product-title {
+        background-color: #2710d5;
+        width: 368px;
+        color: #ffffff;
+        height: 496px;
+        border-radius: 0 248px 248px 0;
+        position: relative;
+    }
+    #product-title > h1 {
+        position: absolute;
+        top: 0;
+        left: 100px;
+        font-size: 80px;
+    }
+    #product-title > span {
+        position: absolute;
+        top: 200px;
+        left: 100px;
+        font-size: 26px;
+    }
+    #product-title > div {
+        position: absolute;
+        top: 350px;
+        left: 100px;
+        font-size: 16px;
+    }
+    .product-section1 {
+        position: relative;
+        margin: 20px;
+        height: 340px;
+    }
+    .product-section1 > img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 450px;
+        margin: 0 40px 30px 0;
+        border-radius: 0 432px 0 0;
+    }
+    .product-section1 > div {
+        position: absolute;
+        top: 0;
+        left: 480px;
+    }
+    .product-section2 {
+        position: relative;
+        margin: 20px;
+        height: 340px;
+    }
+    .product-section2 > img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 450px;
+        margin: 0 0 30px 40px;
+        border-radius: 432px 0 0 0;
+    }
+    .product-section2 > div {
+        width: 500px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .product-h2 {
+        color: #2710d5;
+        font-size: 24px;
+        margin: 0;
+    }
+    .product-h3 {
+        font-size: 28px;
+        margin: 0;
+    }
 }
 
+/* SP */
 @media screen and (max-width: 767px) {
     body {
         min-width: 375px;
         margin: 0;
     }
-
     #nav-pc {
         display: none;
     }
+
     #menu-sp {
         float: right;
         padding: 0;
     }
+
     #nav-sp {
         background-color: #2710d5;
         position: absolute;
         left: 0;
         top: 0;
-        width: 100%;
         height: 100%;
+        width: 100%;
         display: none;
         z-index: 100;
     }
+
     #close {
         position: absolute;
         top: 20px;
@@ -427,7 +600,6 @@ p {
     #logo-sp {
         margin: 80px 0 30px 20px;
     }
-
     #nav-sp > a {
         display: block;
     }
@@ -526,7 +698,6 @@ p {
     #product h2 {
         margin-left: 20px;
     }
-
     #product-left {
         margin-right: 20px;
         margin-left: 20px;
@@ -535,7 +706,6 @@ p {
         margin-right: 20px;
         margin-left: 20px;
     }
-
     #product-left > div {
         position: relative;
         height: 540px;
@@ -544,7 +714,6 @@ p {
         position: relative;
         height: 540px;
     }
-
     .product-explain {
         background-color: #ffffff;
         position: absolute;
@@ -562,7 +731,6 @@ p {
     .product-explain > h3 {
         margin: 10px 0 10px 0;
     }
-
     .product-photo {
         width: 100%;
     }
@@ -735,6 +903,10 @@ p {
     .radiobutton {
         margin-bottom: 20px;
     }
+    /* .radiobutton + label::after {
+        content: "\A";
+        white-space: pre;
+    } */
 
     footer {
         background-color: #0d0d0d;
@@ -750,7 +922,6 @@ p {
         text-decoration: none;
         margin: 0 20px 30px 0;
         display: block;
-
         background-image: url("images/arrow.png");
         background-repeat: no-repeat;
         background-position: right top;
@@ -768,13 +939,161 @@ p {
     #footer-link > a:active {
         color: #ffffff;
     }
+
     #sns-footer > a {
         margin-right: 30px;
     }
+
     #copyright {
         font-size: 12px;
         display: block;
         margin-top: 30px;
         color: #ffffff;
+    }
+
+    /* mission.html*/
+    #mission-main {
+        height: 256px;
+        width: 100%;
+        background-image: url("images/mission/mission-main.png");
+        background-repeat: no-repeat;
+        background-position-y: center;
+        background-size: auto 208px;
+    }
+    #mission-title {
+        background-color: #2710d5;
+        width: 136px;
+        color: #ffffff;
+        height: 256px;
+        border-radius: 0 248px 248px 0;
+        position: relative;
+    }
+    #mission-title > h1 {
+        position: absolute;
+        top: 0;
+        left: 20px;
+        font-size: 40px;
+    }
+    #mission-title > span {
+        position: absolute;
+        top: 110px;
+        left: 20px;
+        font-size: 18px;
+    }
+    #mission-title > div {
+        position: absolute;
+        top: 180px;
+        left: 20px;
+        font-size: 13px;
+    }
+    #mission-s2dgs {
+        margin: 20px;
+    }
+    .mission-h2 {
+        color: #2710d5;
+        font-size: 38px;
+        margin: 0px;
+    }
+    .mission-h2::after {
+        content: none;
+    }
+    #mission-s2dgs > img {
+        width: 100%;
+    }
+    #section-s2dgs > img {
+        width: 100%;
+    }
+    #mission-5goals {
+        margin: 20px;
+    }
+    #mission-5goals > div > div {
+        margin-bottom: 40px;
+    }
+    #s2dgs-image {
+        width: 100%;
+    }
+    .fivegoals-image-right {
+        margin: 20px auto 20px auto;
+        display: block;
+    }
+    .fivegoals-image-left {
+        margin: 20px auto 20px auto;
+        display: block;
+    }
+    .fivegoals-number {
+        color: #2710d5;
+        font-size: 48px;
+        margin: 0;
+    }
+    .fivegoals-h3 {
+        font-size: 28px;
+        margin: 0;
+    }
+    .fivegoals-p {
+        margin: 0;
+    }
+
+    #product-main {
+        height: 256px;
+        width: 100%;
+        background-image: url("images/product/product-main.png");
+        background-repeat: no-repeat;
+        background-position-y: center;
+        background-size: auto 208px;
+    }
+    #product-title {
+        background-color: #2710d5;
+        width: 136px;
+        color: #ffffff;
+        height: 256px;
+        border-radius: 0 248px 248px 0;
+        position: relative;
+    }
+    #product-title > h1 {
+        position: absolute;
+        top: 0;
+        left: 20px;
+        font-size: 40px;
+    }
+    #product-title > span {
+        position: absolute;
+        top: 110px;
+        left: 20px;
+        font-size: 18px;
+    }
+    #product-title > div {
+        position: absolute;
+        top: 180px;
+        left: 20px;
+        font-size: 13px;
+    }
+    .product-section1 {
+        margin: 20px;
+    }
+    .product-section1 > img {
+        width: 100%;
+        border-radius: 0 300px 0 0;
+    }
+    .product-section2 {
+        margin: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+    .product-section2 > img {
+        order: 1;
+        width: 100%;
+        border-radius: 300px 0 0 0;
+    }
+    .product-section2 > div {
+        order: 2;
+    }
+    .product-h2 {
+        color: #2710d5;
+        font-size: 24px;
+        margin: 0;
+    }
+    .product-h3 {
+        font-size: 28px;
+        margin: 0;
     }
 }
